<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/lsvHistory"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lsvHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_0"
        android:textSize="35sp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="25sp"
        android:textColorHint="#D0C5C5"
        android:visibility="invisible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtResult"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_AC"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_C"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/btnAC"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Del"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/btnC"/>

        <Button
            android:id="@+id/btnChia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Chia"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/btnDelete"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_7"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnAC"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_8"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnDelete"
            android:layout_toEndOf="@id/btn7"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_9"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnDelete"
            android:layout_toEndOf="@id/btn8"/>

        <Button
            android:id="@+id/btnNhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Nhan"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnChia"
            android:layout_toEndOf="@id/btn9"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_4"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn7"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_5"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn8"
            android:layout_toEndOf="@id/btn4"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_6"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn9"
            android:layout_toEndOf="@id/btn5"/>

        <Button
            android:id="@+id/btnTru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Tru"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnNhan"
            android:layout_toEndOf="@id/btn6"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_1"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn4"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_2"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn5"
            android:layout_toEndOf="@id/btn1"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_3"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn6"
            android:layout_toEndOf="@id/btn2"/>

        <Button
            android:id="@+id/btnCong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Cong"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnTru"
            android:layout_toEndOf="@id/btn3"/>

        <Button
            android:id="@+id/btnCongTru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Cong_Tru"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn1" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn2"
            android:layout_toEndOf="@id/btnCongTru"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/text_0"
            android:textColor="#E0823C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn3"
            android:layout_toEndOf="@id/btn0"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/text_Dot"
            android:textColor="#E0823C"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Bang"
            android:background="@drawable/custom_button"
            android:textColor="#E0823C"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btnCong"
            android:layout_toEndOf="@id/btnCham"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>